Extracted routing target logic from readwritesplit Current implementation of the route_classifier holds only a single function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ include_directories(${MYSQL_DIR}/..)
 include_directories(utils)
 include_directories(log_manager)
 include_directories(query_classifier)
+include_directories(route_classifier)
 include_directories(server/include)
 include_directories(server/inih)
 include_directories(server/modules/include)
@@ -118,6 +119,7 @@ include_directories(${CMAKE_BINARY_DIR}/server/include)
 add_subdirectory(utils)
 add_subdirectory(log_manager)
 add_subdirectory(query_classifier)
+add_subdirectory(route_classifier)
 add_subdirectory(server)
 if(NOT WITHOUT_MAXADMIN)
   add_subdirectory(client)
