MaxWeb cumulative changes

--- a/server/modules/filter/CMakeLists.txt
+++ b/server/modules/filter/CMakeLists.txt
@@ -4,6 +4,14 @@ if(BUILD_RABBITMQ)
   install(TARGETS mqfilter DESTINATION modules)
 endif()
 
+if(BUILD_REDIS)
+  find_package(HiRedis)
+  include_directories(${HIREDIS_HEADERS})
+  add_library(redisfilter SHARED redisfilter.c)
+  target_link_libraries(redisfilter query_classifier log_manager utils ${HIREDIS_LIBRARIES})
+  install(TARGETS redisfilter DESTINATION modules)
+endif()
+
 add_library(regexfilter SHARED regexfilter.c)
 target_link_libraries(regexfilter log_manager utils)
 install(TARGETS regexfilter DESTINATION modules)
